--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	
+	//NEW ADDED
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 	//implementation files('C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar')
 	
 }
