--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #Do not change
 server.port = 8085
 spring.datasource.url=jdbc:h2:mem:onlinevote
+spring.h2.console.enabled=true
+spring.database.platform=h2
