Reg voter changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port = 8085
 spring.datasource.url=jdbc:h2:mem:onlinevote
 spring.h2.console.enabled=true
 spring.database.platform=h2
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+#spring.session.timeout=900
+
